build: take dcm4che 5.35.0 so compressed snapshots work
Snapshot generation fails for every compressed study once the OpenCV codecs
are present: StreamSegment resolves a stream segment by reflecting into
javax.imageio.stream internals, JDK 17+ denies it, dcm4che logs the denial
and returns null, and NativeImageReader dereferences it. XNAT-6581,
XNAT-6743; upstream dcm4che issue 1403, open since 5.31.2 with no
maintainer response.

The workaround that issue records, --add-opens
java.desktop/javax.imageio.stream=ALL-UNNAMED, is worse than the fault it
works around. Reflection then succeeds, the native receives something it
cannot use, and the JVM dies: reproduced as a SIGSEGV in
jni_GetStringUTFChars on linux/amd64 under tomcat:9-jdk21-temurin, and on
macOS arm64. A failed snapshot becomes a failed Tomcat.

5.35.0 removed the reflection -- it asks the stream for its file directly.
Verified on linux/amd64 JDK 21 with no flags: DicomImageReader, the path
DicomImageRenderer uses, decodes JPEG 2000 where 5.33.1 threw. That makes
an XNAT-side workaround unnecessary; the fix belongs upstream and is there.

The three versions move together, so weasis-core-img goes to 5.0.0 and the
native to 5.0.0-dcm, and the mirror needs a second run for the new
coordinates. The Linux native roughly doubles, to 34 MB.

Two dicom-edit6 tests broke on the bump, both in fixtures rather than in
anything shipped. They used (0010,0011) as a placeholder for "an element
inside a sequence item", and 5.35.0 carries a dictionary in which the
standard has since assigned it as PersonNamesToUseSequence with VR SQ, so a
string value no longer goes in. Moved to (0010,0017), still unassigned,
with a note about why it has to stay that way -- the standard has been
filling in that part of the group.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>